<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addMeeting.AddMeetingActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/styleToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Ajouter une réunion" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_topic"
        style="@style/field_add_reu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sujet_de_la_reunion"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/field_add_reu_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_room"
        style="@style/field_add_reu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_salle_hint"
        app:layout_constraintTop_toBottomOf="@id/edit_topic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_room_child"
            style="@style/field_add_reu_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_participants"
        style="@style/field_add_reu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_add_participant"
        app:layout_constraintTop_toBottomOf="@id/edit_room">

        <AutoCompleteTextView
            android:id="@+id/edit_participants_child"
            style="@style/field_add_reu_edittext"
            android:layout_width="match_parent"
            android:completionThreshold="1"
            android:hint="@string/edit_participants_hint"
            android:paddingLeft="12dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_participant"
        style="@style/field_add_reu"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:text="+"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="0.15"
        app:layout_constraintLeft_toRightOf="@id/edit_participants"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_room" />

     <TextView
         android:id="@+id/titre_liste_emails"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_delete_participant"
         app:layout_constraintTop_toBottomOf="@id/edit_participants"

         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="0dp"
         android:text="Participant(s) enregistré(s) :"
         tools:visibility="visible"
         android:textStyle="bold"
         android:textSize="@dimen/size_text_classic"
         android:visibility="gone"
         />

    <TextView
        android:id="@+id/liste_emails"
        style="@style/field_add_reu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="0dp"

        android:textSize="@dimen/size_text_classic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_delete_participant"
        app:layout_constraintTop_toBottomOf="@id/titre_liste_emails"
        tools:text="bob@lamzone.com\nemily@lamzone.com" />

    <Button
        android:id="@+id/btn_delete_participant"
        style="@style/field_add_reu"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:backgroundTint="@color/red"

        android:text="-"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/liste_emails"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_participants"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_date"
        style="@style/field_add_reu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date de la réunion"
        app:layout_constraintTop_toBottomOf="@id/liste_emails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_date_child"
            style="@style/field_add_reu_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_start_time"
        style="@style/field_add_reu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Débute à ..."
        app:layout_constraintTop_toBottomOf="@id/edit_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_start_time_child"
            style="@style/field_add_reu_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:padding="@dimen/padding_button"
        android:textSize="@dimen/size_text_titre2"
        android:text="@string/sauvegarder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_start_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
