...
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/liste_meetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager"
        app:layout_constrainedHeight="true"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        tools:listitem="@layout/item_meet" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/ajouter_une_reunion"
        android:src="@drawable/ic_add"
...
