...
        android:text="A"
        android:gravity="center"
        android:importantForAccessibility="no" />


    <TextView
        android:id="@+id/item_meeting_tv_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/item_meeting_tv_icon"
        app:layout_constraintRight_toLeftOf="@id/item_btn_delete"
        android:layout_marginLeft="@dimen/margin_big"
        android:textSize="@dimen/size_text_titre2"
        android:textStyle="bold"
        tools:text="Titre réunion"
        />

...
