<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.main.filter.SideSheetFilterFragment">

    <TextView
        android:id="@+id/titre_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="@dimen/size_text_title"
        android:text="@string/filtres"
        />

    <LinearLayout
        android:id="@+id/filtres_salles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titre_bottom_sheet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/filtres_dates"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:orientation="vertical"
        >



    <TextView
        style="@style/filter_subtitle"
        android:text="@string/par_salle"
        />

    <CheckBox
        android:id="@+id/filter_salle_A"
        style="@style/filter_checkbox"
        android:checked="true"
        tools:text="Salle A"
        />

    <CheckBox
        android:id="@+id/filter_salle_B"
        style="@style/filter_checkbox"
        android:checked="true"
        tools:text="Salle B"
        />

    <CheckBox
        android:id="@+id/filter_salle_C"
        style="@style/filter_checkbox"
        android:checked="true"
        tools:text="Salle C"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filtres_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titre_bottom_sheet"
        app:layout_constraintLeft_toRightOf="@id/filtres_salles"
        app:layout_constraintRight_toRightOf="parent"

        android:orientation="vertical"
        >

    <TextView
        style="@style/filter_subtitle"
        android:text="Par date"
        />

    <RadioGroup
        android:id="@+id/filter_group_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <RadioButton
        android:id="@+id/filter_date1"
        style="@style/filter_checkbox"
        android:text="Aujourd'hui"
        />

    <RadioButton
        android:id="@+id/filter_date2"
        style="@style/filter_checkbox"
        android:text="Dans les 7 jours"
        />

    <RadioButton
        android:id="@+id/filter_date3"
        style="@style/filter_checkbox"
        android:text="Dans les 30 jours"
        />

        <RadioButton
        android:id="@+id/filter_date4"
        style="@style/filter_checkbox"
        android:text="Toutes les réunions"
            android:checked="true"
        />
    </RadioGroup>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>