<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/btn_filter"
        android:icon="@drawable/ic_filter"
        android:title="Filtrer"
        app:showAsAction="ifRoom" />
</menu>